--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body ng-controller="mainCtrl">
     <div class="main-container">
       <h1> DevMountain Chat Room </h1>
-      <form ng-submit="postData()">
+      <form ng-submit="postData(message)">
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
       </form>
       <div class="messages-container">
-        <p ng-repeat="message in messages"> {{message.text}} </p>
+        <p ng-repeat="message in messages" ng-hide="!message.text"> {{message.text}} 
+          <span class='timeStamp'>{{message.createdAt | date: mediumDate}}<span>
+        </p>
       </div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
